# game_engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PH2.frag  cmake_install.cmake  tears_engine  tears_engine.cbp
assets/shaders/: color.frag  quad.vert
source/: GameState.h  GameStateManager.cpp  GameStateManager.h  MenuState.cpp  MenuState.h  Mesh.hpp  PlayState.cpp  PlayState.h  Program.cpp  Program.h  ShaderHandler.cpp  ShaderHandler.h  common.h  main.cpp
source/Components/: CameraComponent.h  CameraComponent.hpp  Component.cpp  Component.h  Material.h  MeshRenderer.h  Position.cpp  Position.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
source/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
source/Events/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseClick.cpp  MouseClickEvent.cpp  MouseClickEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  ShapeChangeEvent.cpp  ShapeChangeEvent.h
source/Systems/: CameraSystem.cpp  CameraSystem.hpp  MovementSystem.cpp  MovementSystem.h  ProgramSystem.cpp  ProgramSystem.h  RenderSystem.cpp  RenderSystem.h  SelectionSystem.cpp  SelectionSystem.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  TransformSystem.cpp  TransformSystem.h
source/camera/: camera.hpp
source/camera/controllers/: fly_camera_controller.hpp  orbit_camera_controller.hpp
source/mesh/: common-vertex-attributes.hpp  common-vertex-types.hpp  data-types.h  mesh-utils.cpp  mesh-utils.hpp  mesh.hpp  vertex-attributes.hpp
